--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -14,10 +14,39 @@
       <pre><%= blog.body %></pre>
     </div>
 
-    <div class="container">
+    <% if (locals.user) { %>
+     
+        <div class="container">
         <img src="<%=blog.createdBy.profileImageUrl  %>" width="50px">
         <%= blog.createdBy.fullName %>
+
     </div>
+
+    <div class="container">
+        <form action="/blog/comment/<%= blog._id %>" method="POST">
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">comments (<%= comments.length %>) </label>
+    <input type="text" class="form-control" name="content" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+ 
+  
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+    </div>
+
+    <% } %>
+
+    <div class="container">
+      <% comments.forEach(comment => { %>
+        <div>
+           <img src="<%=blog.createdBy.profileImageUrl  %>" width="50px">
+           <%= comment.createdBy.fullName %>
+           <pre><%= comment.content %></pre>
+        </div>
+       
+      <% }) %>
+    </div>
+    
 
     <%- include('./partial/script') %>
   </body>
